gitops/components/instrumented-app/overlays/prod/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instrumented-app
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: app
