gitops/components/instrumented-app/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instrumented-app
spec:
  rules:
    - host: app.prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: instrumented-app
                port:
                  number: 8080
